src/components/status.css
/* ... */
.status-pre-meta + .status {
  padding-top: 8px;
}
.status.small {
  font-size: 95%;
}
.status.skeleton {
  color: var(--outline-color);
}

.status.skeleton > .avatar {
  background-color: var(--outline-color);
}
.indirect .status {
  padding-left: 57px;
}
.indirect .status .avatar {
  width: 25px !important;
  height: 25px !important;
  transform: translateX(5px);
}

.status .container {
  flex-grow: 1;
  min-width: 0;
}
.status:not(.small) .container {
  padding-left: 16px;
}

.status > .container > .meta {
  display: flex;
  gap: 8px;
  justify-content: space-between;
}
.status.large > .container > .meta {
  min-height: 50px;
}
.status > .container > .meta .arrow {
  color: var(--reply-to-color);
  vertical-align: middle;
}
.status > .container > .meta :is(.time, .edited) {
  color: inherit;
  text-align: end;
  opacity: 0.5;
  text-decoration: none;
  flex-shrink: 0;
  margin-left: 4px;
  white-space: nowrap;
}
.status > .container > .meta a.time:hover {
  text-decoration: underline;
}
.status > .container > .meta .reply-to {
  opacity: 0.5;
  font-size: smaller;
}

.status.large .content-container {
  margin-left: calc(-50px - 16px);
  padding-top: 10px;
  padding-bottom: 10px;
}

.status .content-container.has-spoiler .spoiler {
  margin: 8px 0;
  font-size: 90%;
  border: 1px dashed var(--button-bg-color);
  display: flex;
  gap: 8px;
  align-items: center;
}
.status .content-container.has-spoiler .spoiler ~ * {
  filter: blur(6px) invert(0.5);
  pointer-events: none;
  transition: filter 0.5s;
  user-select: none;
}
.status .content-container.has-spoiler .spoiler ~ .content ~ * {
  opacity: 0.5;
}
.status .content-container.show-spoiler .spoiler {
  border-style: dotted;
}
.status .content-container.show-spoiler .spoiler ~ * {
  filter: none;
  pointer-events: auto;
  user-select: auto;
}
.status .content-container.has-spoiler .spoiler ~ .content ~ * {
  opacity: 1;
}

.status .content {
  margin-top: 8px;
}
.timeline-deck .status .content {
  max-height: 50vh;
  max-height: 50dvh;
  overflow: hidden;
  position: relative;
}
.timeline-deck .status .content.truncated {
  mask-image: linear-gradient(to top, transparent 0.5em, black 1.5em);
}
.timeline-deck .status .content.truncated:after {
  content: attr(data-read-more);
  line-height: 1;
  display: inline-block;
  position: absolute;
  inset-block-end: 1em;
  left: 50%;
  transform: translateX(-50%);
  color: var(--text-color);
  background-color: var(--bg-faded-color);
  border: 2px solid var(--link-light-color);
  padding: 0.5em 1em;
  border-radius: 10em;
  font-size: 12px;
  font-weight: bold;
  text-transform: uppercase;
  box-shadow: 0 0 0 2px var(--bg-color), 0 0 10px var(--bg-color),
    0 0 10px var(--bg-color), 0 0 10px var(--bg-color);
}
.timeline-deck .status .content.truncated:hover:after {
  border-color: var(--link-color);
}
.status .content p {
  margin-block: 0.75em;
}
.status .content p:first-child {
  margin-block-start: 0;
}
.status .content p:last-child {
  margin-block-end: 0;
}
.status .content .invisible {
  display: none;
}
.status .content .ellipsis::after {
  content: '…';
}
.status.large .content {
  font-size: 150%;
  font-size: calc(100% + 50% / var(--content-text-weight));
}
.status.large .poll,
.status.large .actions {
  font-size: 125%;
  font-size: calc(100% + 25% / var(--content-text-weight));
}

/* MEDIA */

.status .media-container {
  margin-top: 8px;
  display: flex;
  flex-wrap: wrap;
  gap: 8px;
  flex-direction: row;
}
.status .media {
  flex-grow: 1;
  flex-basis: calc(50% - 8px);
  border-radius: 8px;
  overflow: hidden;
  max-height: 160px;
  min-height: 80px;
  border: 1px solid var(--outline-color);
}
.status .media:hover {
  border-color: var(--outline-hover-color);
}
.status .media.block {
  flex-basis: 100%;
  max-height: auto;
}
.status .media :is(img, video) {
  width: 100%;
  height: 100%;
  object-fit: cover;
  cursor: pointer;
}
@keyframes position-object {
  0% {
    object-position: 50% 50%;
  }
  25% {
    object-position: 0% 0%;
  }
  75% {
    object-position: 100% 100%;
  }
  100% {
    object-position: 50% 50%;
  }
}
.status .media img:hover {
  animation: position-object 5s ease-in-out 1s infinite;
}
.status .media video {
  width: 100%;
  height: 100%;
  object-fit: contain;
}
.status .media-video {
  position: relative;
}
.status .media-video:before {
  /* draw a circle in the middle */
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 70px;
  height: 70px;
  border-radius: 50%;
  background-color: var(--bg-blur-color);
  backdrop-filter: blur(6px) saturate(3) invert(0.2);
  z-index: 1;
}
.status .media-video:after {
  /* show play icon */
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-35%, -50%);
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 15px 0 15px 26px;
  border-color: transparent transparent transparent
    var(--text-insignificant-color);
  pointer-events: none;
  opacity: 0.75;
  z-index: 2;
}
.status .media-video:hover:after {
  opacity: 1;
}
.status .media-gif video {
  object-fit: cover;
}
.status .media-audio {
  border: 0;
  min-height: 0;
}
.status .media-audio audio {
  width: 100%;
}

/* CARD */

.card {
  display: flex;
  margin-top: 8px;
  border-radius: 8px;
  border: 1px solid var(--outline-color);
  overflow: hidden;
  color: inherit;
  align-items: center;
  background: var(--bg-color);
}
.card .image {
  /* min-width: 120px; */
  width: 50%;
  max-width: 160px;
  height: auto;
  min-height: 120px;
  max-height: 160px;
  object-fit: cover;
  border-inline-end: 1px solid var(--outline-color);
}
.card:hover .image {
  animation: position-object 5s ease-in-out 1s infinite;
}
.card p {
  margin: 0;
}
.card .meta-container {
  padding: 8px;
  min-width: 0;
}
/* ... */

